added full water amount by day
